@@ -1264,8 +1264,8 @@ LISPSYM(Kkey_type,"KEY-TYPE",keyword)
 LISPSYM(Kvalue_type,"VALUE-TYPE",keyword)
 LISPSYM(Kwarn_if_needs_rehash_after_gc,"WARN-IF-NEEDS-REHASH-AFTER-GC",keyword)
 LISPSYM(Kweak,"WEAK",keyword)
-LISPSYM(Kboth,"BOTH",keyword)
-LISPSYM(Keither,"EITHER",keyword)
+LISPSYM(Kkey_and_value,"KEY-AND-VALUE",keyword)
+LISPSYM(Kkey_or_value,"KEY-OR-VALUE",keyword)
 LISPSYM(Kvalue,"VALUE",keyword)
 LISPSYM(Kdefaults,"DEFAULTS",keyword)
 LISPSYM(Kdevice,"DEVICE",keyword)
