@@ -1,3 +1,10 @@
+2005-04-12  Bruno Haible  <bruno@clisp.org>
+
+	* weak.tst: Update for change :either -> :key-and-value,
+	:both -> :key-or-value.
+	* weakhash.tst: Likewise.
+	* weakhash2.tst: Likewise.
+
 2005-04-10  Bruno Haible  <bruno@clisp.org>
 
 	* weakhash.tst: Test long chains of weak hash tables.
